# swatchbook

./: .gitignore  Cargo.toml  LEARNING.md  Makefile  README.md  cargo-sources.json  incus-build.toml  io.github.patricioaumedes.Swatchbook.json  meson.build  meson_options.txt
.github/workflows/: ci.yml  release.yml
build-aux/: cargo.sh  changelog  control  copyright  incus-build.sh  make-completion.bash  postinst  postrm  release.sh
data/: com.example.Swatchbook.desktop.in  com.example.Swatchbook.gschema.xml  io.github.patricioaumedes.Swatchbook.desktop.in  io.github.patricioaumedes.Swatchbook.gschema.xml  io.github.patricioaumedes.Swatchbook.metainfo.xml  io.github.swatchbook.Swatchbook.desktop.in  io.github.swatchbook.Swatchbook.gschema.xml  io.github.swatchbook.Swatchbook.metainfo.xml  meson.build
docs/: ARCHITECTURE.md  BUILD.md  PHASES.md  RELEASING.md
po/: POTFILES  de.po  es.po  fr.po
src/: config.rs.in  document.rs  lib.rs  main.rs  meson.build  parser.rs  renderer.rs  swatchbook.gresource.xml  token.rs  window.blp  window.rs
tests/: contrast_tests.rs  document_tests.rs  export_tests.rs  parser_tests.rs  renderer_tests.rs  token_tests.rs
