[package]
name = "swatchbook"
version = "0.3.1"
edition = "2021"
rust-version = "1.75"
description = "A Markdown-powered style binder for GNOME"
license = "GPL-3.0-or-later"

[[bin]]
name = "swatchbook"
path = "src/main.rs"

[lib]
name = "swatchbook"
path = "src/lib.rs"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_10"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_4"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
pulldown-cmark = "0.12"
pangocairo = "0.20"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
